fix dropdown colours on mobile

--- a/style/styles.scss
+++ b/style/styles.scss
@@ -140,7 +140,6 @@ h1 {
 }
 
 .dates-links {
-  z-index: 99999999;
   list-style-type: none;
   margin: 0;
   padding: 0;
